## Change log

### 1.8.7
* Dev - Added in a conditional tag to allow the LSX sharing to show
* Dev - LSX Sharing integrated

### 1.8.6
* Fix - Fixed CSS enqueue (parent > child themes)
* Fix - Removed remove_filter: the_excerpt/wpautop
* Fix - Small Sass files change (wiyhout affect CSS)
* Fix - Fixed duplicated breadcrumb for custom taxonomy archives
* Fix - Fixed CSS for radio and checkboxes (forms)
* Fix - Delaying the the child theme CSS loading

### 1.8.5
* Fix - Footer widgets changed breakpoint
* Fix - Keep default behaviour from sliders on mobile
* Fix - Adjusted content.php to be more flexible for styles (LSX Blog Customizer requirement)
* Fix - Small adjust on post archive - post item footer style
* Fix - Fixed post author when 'get_the_author' is not available
* Fix - Fixed breadcrumb display position on archive.php, author.php and search.php
* Fix - Small issue (style) with Pagenavi pagination

### 1.8.4
* Fix - Re-added the get_comments_number() fix

### 1.8.3
* Fix - Removed custom image classes from avatar in admin bar
* Fix - Top menu dropdown in large screens (first level link didn’t works)
* Fix - Moved the get_comments_number() out of the empty() statement, causing a Fatal PHP Error

### 1.8.2
* Fix - Enabled compatibility between LSX Banners (Soliloquy) and LSX Theme
* Fix - Enabled compatibility between LSX Blog Customiser (categories BS carousel) and LSX Theme
* Fix - Enabled compatibility between LSX Blog Customiser (display full content on blog pages) and LSX Theme
* Fix - Enabled compatibility between LSX Blog Customiser (display grid layout on blog pages) and LSX Theme
* Fix - Added a JavaScript option to avoid hide top menu on scroll
* Fix - Adjusted the next/previous post navigation (wider columns)
* Fix - Adjusted comment author thumbnail display

### 1.8.1
* Fix - Avoided use a return function inside the PHP function "empty" (compatibility with PHP 5.5 and lower)
* Fix - Compatibility with WPML 3.6