@@ -1,0 +1,32 @@
+.modal {
+	.modal-content {
+		padding: 20px;
+		border-radius: 0;
+		border: 6px solid $primary-darker;
+	}
+
+	.modal-body {
+		padding: 0;
+		overflow-x: hidden;
+	}
+
+	.close {
+		position: absolute;
+		top: -14px;
+		right: -14px;
+		opacity: 1;
+		color: #FFF;
+		width: 32px;
+		height: 32px;
+		background-color: $primary-darker;
+		z-index: 2;
+		border-radius: 50%;
+		border: 2px solid #FFF;
+		box-shadow: 0 0 4px 0 $primary-darker;
+
+		&:hover {
+			background-color: $primary-darker;
+			opacity: 1;
+		}
+	}
+}
