@@ -16,3 +16,4 @@
 @import "blog_v2_styles";
 @import "loading";
 @import "lazyload";
+@import "modal";
