@@ -3,6 +3,7 @@
 ### 1.8.7
 * Dev - Added in a conditional tag to allow the LSX sharing to show
 * Dev - LSX Sharing integrated
+* Dev - Added styles for Bootstrap's modal
 
 ### 1.8.6
 * Fix - Fixed CSS enqueue (parent > child themes)
